# stark-bot

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  HEARTBEAT.md  HOW_TO_USE_POLYMARKET.md  PLAN_MEMORY_SYSTEM.md  PLAN_WORKER_DELEGATION.md  README.md  SPACEBOT_UPGRADE_REPORT.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  docker_run.sh  format_briefing.py  run.sh  skills-lock.json  wallet-briefing.md
modules/starkbot_sdk/: pyproject.toml
modules/starkbot_sdk/src/starkbot_sdk/: __init__.py  tui.py  x402.py
stark-backend/: Cargo.toml  HOW_TO_BRIDGE_WITH_ACROSS_PROTOCOL.md  TODO.md  discord_tipping.db-shm  discord_tipping.db-wal  wallet_monitor.db-shm  wallet_monitor.db-wal
stark-backend/examples/: test_bridge_usdc.rs
stark-backend/modules/openagent/: module.toml  service.js
stark-backend/modules/openagent/lib/: gateway-bridge.js  signer-proxy.js
stark-backend/modules/wallet_monitor/: module.toml
stark-backend/src/: ai_endpoint_config.rs  config.rs  disk_quota.rs  keystore_client.rs  kv_store.rs  main.rs  persona_hooks.rs
stark-backend/src/agents/: loader.rs
stark-backend/src/ai/: mod.rs  openai.rs
stark-backend/src/ai/archetypes/: minimax.rs
stark-backend/src/ai/multi_agent/: orchestrator.rs  subagent_manager.rs  types.rs
stark-backend/src/backup/: mod.rs  restore.rs
stark-backend/src/channels/: discord.rs  dispatcher.rs  dispatcher_tests.rs  mod.rs  slack.rs  telegram.rs  twitter.rs  types.rs
stark-backend/src/channels/dispatcher/: commands.rs  finalization.rs  mod.rs  skills.rs  system_prompt.rs  tool_loop.rs  tool_processing.rs
stark-backend/src/context/: mod.rs
stark-backend/src/controllers/: agent_settings.rs  agent_subtypes.rs  api_keys.rs  channels.rs  chat.rs  cron.rs  dev_chat.rs  ext.rs  external_channel.rs  files.rs  gmail.rs  health.rs  heartbeat.rs  identity.rs  intrinsic.rs  kv_store.rs  memories.rs  memory.rs  mindmap.rs  mod.rs  modules.rs  sessions.rs  skills.rs  special_roles.rs  system.rs  tools.rs  well_known.rs  x402.rs  x402_limits.rs
stark-backend/src/db/: sqlite.rs
stark-backend/src/db/tables/: agent_contexts.rs  agent_settings.rs  agent_subtypes.rs  bot_settings.rs  chat_sessions.rs  heartbeat.rs  identities.rs  memories.rs  memory_associations.rs  memory_embeddings.rs  mind_nodes.rs  mod.rs  special_roles.rs  x402_payment_limits.rs
stark-backend/src/discord_hooks/: config.rs  mod.rs
stark-backend/src/eip8004/: identity.rs  reputation.rs
stark-backend/src/gateway/: events.rs  mod.rs  protocol.rs  server.rs
stark-backend/src/gateway/methods/: channels.rs  mod.rs  status.rs
stark-backend/src/integrations/: starkhub_client.rs  wallet_monitor_client.rs
stark-backend/src/memory/: association_loop.rs  associations.rs  decay.rs  embeddings.rs  hybrid_search.rs  mod.rs  redaction.rs  vector_search.rs
stark-backend/src/models/: agent_settings.rs  bot_settings.rs  channel.rs  channel_settings.rs  cron_job.rs  mod.rs  special_role.rs
stark-backend/src/modules/: discord_tipping.rs  dynamic_module.rs  manifest.rs  mod.rs  wallet_monitor.md  wallet_monitor.rs  zip_parser.rs
stark-backend/src/qmd_memory/: file_ops.rs  store.rs
stark-backend/src/scheduler/: runner.rs
stark-backend/src/skills/: embeddings.rs  zip_parser.rs
stark-backend/src/telemetry/: resource_version.rs
stark-backend/src/tools/: context_bank.rs  mod.rs  presets.rs  registry.rs  rpc_config.rs  types.rs
stark-backend/src/tools/builtin/: agent_send.rs  deploy.rs  exec.rs  mod.rs  (+13 more)
stark-backend/src/wallet/: env_provider.rs  flash_provider.rs  mod.rs
stark-backend/src/web3/: mod.rs
stark-backend/src/x402/: client.rs  evm_rpc.rs  mod.rs  payment_limits.rs  signer.rs  types.rs  verify.rs
(+259 files in other folders)
