[package]
name = "stark-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"

# Gateway WebSocket server
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Telegram integration
teloxide = { version = "0.12", features = ["macros"] }

# Slack integration
slack-morphism = { version = "2", features = ["hyper"] }

# Concurrent state management
dashmap = "5"
