[project]
name = "starkbot-sdk"
version = "0.2.0"
description = "Shared SDK for StarkBot Python modules"
requires-python = ">=3.12"
dependencies = ["flask"]

[project.optional-dependencies]
tui = ["rich>=13.0.0", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/starkbot_sdk"]
